added repo to website

--- a/ECE5725_Website/index.html
+++ b/ECE5725_Website/index.html
@@ -75,6 +75,7 @@
 								<h2 class="alt"><strong>Raspberry Pi Cluster</strong><br />
 								<strong>Accelerating TEA</strong></h2>
 								<h4>By Jeff Witz and Jonathan Wu</h4>
+
 							</header>
 
 							<footer>
@@ -337,6 +338,9 @@
 							<header>
 								<h2>Appendix</h2>
 							</header>
+
+							<h3>Code</h3>
+							<p>Code can be found on our <a href="https://github.com/jwitz54/ParallelPiEncryption"> GitHub Repo. </a>All the finalized code is located in the directory 'FinalCode' and there is a readme.md within that directory detailing how to run the code.</p>
 
 							<h3>Project Costs</h3>
 							<article class="item">
